SimGrid (3.10pre1) unstable; urgency=low

 Java:
 * Reintegrate Java to the main archive as desynchronizing these
   package is not acceptable anymore (Java is now considered stable)
 * Add explicit synchronization facilities through semaphores
 * Bug fix: Task.setDataSize() only changed the C world, not the value
   cached in the Java world

 MSG:
 * Dramatically change the way files are handled. API and internals changed, but
   this part of MSG was not considered as production grade either.
 * Add explicit synchronization facilities through semaphores
 * Add a new function MSG_host_get_process_list()
 * Preliminary DVFS support (see examples/msg/energy/ for details)

 SMPI:
 * SMPI is now included directly in the libsimgrid as the windows
   linker doesn't force us on splitting it anymore.
 * Improvements of the SMPI replay tool:
   - Most of the collective communications are now rooted in the same process as
     in the original application.
   - Traces now rely on the same MPI data type as the application (MPI_BYTE was
     used until now). Multiple data types can now be used in a trace.
   - The replay tool now supports traces produce either by TAU or a modified
     version of MPE.
   - Bug Fix: the compute part of the reduce action is now taken into account.
 * smpirun generates the host file if needed (with given host count and platform)
 * Integration of more than 100 STAR-MPI, MPICH, OpenMPI collective algorithms
   - allows to select one in particular with --cfg=smpi/coll_name:algorithm
   - allows to use the decision logic of OpenMPI(1.7) or MPICH(3.0.4) by setting
     --cfg=smpi/coll_selector:(mpich/ompi)
 * Support for new functions : MPI_Issend, MPI_Ssend, Commutative operations in
   Reduce
 * Add a --cfg:tracing/smpi/internals option, to trace internal communications
   happening inside a collective SMPI call.
 * Fix the behavior of complex data types handling.
 * Make MPI_Wtime another synchronization point to take computations into account.