@@ -1,3 +1,9 @@
+SimGrid (3.11) NOT RELEASED; urgency=low
+
+ (to complete)
+
+ -- $date Da SimGrid team <simgrid-devel@lists.gforge.inria.fr>
+
 SimGrid (3.10pre1) unstable; urgency=low
 
  Java:
